# drone-project

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: mav.parm  mav.tlog  mav.tlog.raw
data/: sample_flight_log.csv
data/events/: events_20260308_145749.txt  events_20260308_145757.txt  events_20260308_145831.txt  events_20260308_150035.txt  events_20260308_150557.txt  events_20260308_150603.txt  events_20260308_150705.txt  events_20260308_150817.txt  events_20260308_151024.txt  events_20260308_152247.txt  events_20260308_152340.txt  events_20260308_152444.txt  events_20260308_153348.txt  events_20260308_154214.txt  events_20260308_180349.txt  events_20260308_180426.txt  events_20260308_180811.txt  events_20260308_182403.txt  events_20260308_182837.txt  events_20260308_183028.txt  events_20260308_183629.txt  events_20260308_184102.txt  events_20260308_193056.txt  events_20260308_193257.txt  (+149 more)
docs/: API.md  ARCHITECTURE.md  FIXES_APPLIED.md  FLIGHT_CONTROL_ANALYSIS.md  FLIGHT_CONTROL_FIXES_IMPLEMENTED.md  FLIGHT_CONTROL_V9.md  INSTALL_FIXED.md  QUICKSTART.md  QUICK_START.md  READY_TO_FLY.md  SETUP.md  SETUP_COMPLETE.md  TELEMETRY_ANALYZER.md  TEST_FLIGHT_1M_GUIDE.md
scripts/: aggregate_flight_data.py  fetch_archived_lfs_data.sh  organize_workspace_data.py  run_analyzer.sh
src/: ascend_autoflight.py  ascend_blackbox.py  ascend_server.py  ascend_tui.py  ascend_tui_v2.py  check_connection.py  check_heartbeat.py  drone_server.py  events_20260309_195529.txt  get_flow_data.py  log_flight_data.py  manual_flight_blackbox.py  mav.parm  pc_data_visualizer.py  pi_check.py  pi_data_streamer.py  pixhawk_bridge.py  plot_ascend_log.py  record_livox.py  remote_test.py  serial_dump.py  simple_arm_test.py  sys_check.sh  telemetry_20260309_195529.csv  test_mavlink.py
tests/: final_lab_check.py  final_test.py  full_stack_check.py  test_mavsdk_link.py  test_tpu.py
tools/: telemetry_analyzer.py
(+187 files in other folders)
